syntax = "proto3";
package metrics;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service JetMetricsUpstream {
    rpc StreamTransactionEvents(stream TransactionEvent) returns (google.protobuf.Empty);
}

message TransactionEvent {
  google.protobuf.Timestamp timestamp = 1;
  bytes signature = 2;
  oneof event {
    TransactionEventSendAttempt send_attempt = 3;
  }
}

message TransactionEventSendAttempt {
  bytes leader = 1;
  repeated uint64 slots = 2;
  string tpu_addr = 3;
  optional string error = 4;
}
